Converts Gradle project to a multi-project setup.